# hydrokit

./: .gitignore  DATA_REQUIREMENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/examples/: test.ipynb  test_hydropy.ipynb
hydrokit/: pedotransfer.py  utils.py
hydrokit/input/: climate.py  lulc.py  soil.py  watershed.py
notebooks/01_preprocessing/: ROI_data_preparation.ipynb
