[project]
name = "hydrokit"
version = "0.1.0"
dependencies = [
    "geopandas",
    "numpy",
    "pandas",
    "matplotlib",
    "rasterio",
    "rioxarray",
    "xarray",
    "shapely",
    "pysheds",
    "soilgrids",
    "planetary-computer",
    "pystac-client",
    "odc-stac",
]

[tool.setuptools.packages.find]
where = ["."]